--- a/Client/package.json
+++ b/Client/package.json
@@ -19,6 +19,7 @@
     "@mui/icons-material": "^7.0.2",
     "@mui/material": "^7.0.2",
     "@tailwindcss/vite": "^4.0.14",
+    "axios": "^1.9.0",
     "gsap": "^3.12.7",
     "locomotive-scroll": "^4.1.4",
     "react": "^19.1.0",
