--- a/Server/package.json
+++ b/Server/package.json
@@ -11,9 +11,16 @@
     "license": "ISC",
     "description": "",
     "dependencies": {
+        "bcrypt": "^5.1.1",
         "cors": "^2.8.5",
         "dotenv": "^16.5.0",
         "express": "^5.1.0",
         "pg": "^8.15.6"
+    },
+    "devDependencies": {
+        "@types/bcrypt": "^5.0.2",
+        "@types/cors": "^2.8.18",
+        "@types/express": "^5.0.1",
+        "@types/pg": "^8.15.1"
     }
 }
