--- a/Server/package.json
+++ b/Server/package.json
@@ -1,12 +1,11 @@
 {
     "name": "server",
     "version": "1.0.0",
-    "main": "dist/index.js",
+    "main": "index.js",
     "type": "module",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
-        "build": "tsc",
-        "start": "node dist/index.js"
+        "build": "tsc"
     },
     "keywords": [],
     "author": "",
@@ -23,7 +22,6 @@
         "@types/bcrypt": "^5.0.2",
         "@types/cors": "^2.8.18",
         "@types/express": "^5.0.1",
-        "@types/pg": "^8.15.1",
-        "typescript": "^5.0.0"
+        "@types/pg": "^8.15.1"
     }
 }
