--- a/Server/package.json
+++ b/Server/package.json
@@ -6,7 +6,7 @@
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
         "build": "tsc",
-        "start": "ts-node index.ts"
+        "start": "node --loader ts-node/esm index.ts"
     },
     "keywords": [],
     "author": "",
