--- a/Server/tsconfig.json
+++ b/Server/tsconfig.json
@@ -1,13 +1,20 @@
 {
     "compilerOptions": {
-        "target": "ES2020",
+        "outDir": "./dist", // Källkoden kompileras till 'dist'
+        "rootDir": ".", // Rötter är nu i rotmappen (Server/)
         "module": "ESNext",
+        "target": "ES2020",
         "moduleResolution": "node",
         "esModuleInterop": true,
-        "outDir": "./dist",
+        "forceConsistentCasingInFileNames": true,
         "strict": true,
         "skipLibCheck": true
     },
-    "include": ["**/*.ts"],
-    "exclude": ["node_modules", "dist"]
+    "include": [
+        "*.ts" // Inkludera alla TS-filer i rotmappen
+    ],
+    "exclude": [
+        "node_modules",
+        "dist" // Exkludera node_modules och dist från kompilering
+    ]
 }
