--- a/Server/tsconfig.json
+++ b/Server/tsconfig.json
@@ -1,7 +1,7 @@
 {
     "compilerOptions": {
         "outDir": "./dist", // Källkoden kompileras till 'dist'
-        "rootDir": "./", // Rötter är nu i rotmappen (Server/)
+        "rootDir": ".", // Rötter är nu i rotmappen (Server/)
         "module": "ESNext",
         "target": "ES2020",
         "moduleResolution": "node",
