--- a/Client/package.json
+++ b/Client/package.json
@@ -20,6 +20,7 @@
     "@mui/material": "^7.0.2",
     "@tailwindcss/vite": "^4.0.14",
     "axios": "^1.9.0",
+    "firebase": "^11.7.1",
     "gsap": "^3.12.7",
     "locomotive-scroll": "^4.1.4",
     "react": "^19.1.0",
