--- a/Server/package.json
+++ b/Server/package.json
@@ -7,6 +7,7 @@
         "test": "echo \"Error: no test specified\" && exit 1",
         "build": "tsc",
         "prepare": "npm run build",
+        "postbuild": "cp -r uploads dist/uploads",
         "start": "node ./dist/index.js"
     },
     "keywords": [],
