--- a/Client/package.json
+++ b/Client/package.json
@@ -22,6 +22,7 @@
     "axios": "^1.9.0",
     "firebase": "^11.7.1",
     "gsap": "^3.12.7",
+    "jwt-decode": "^4.0.0",
     "locomotive-scroll": "^4.1.4",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
