--- a/Client/package.json
+++ b/Client/package.json
@@ -16,9 +16,10 @@
     "@fortawesome/free-regular-svg-icons": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
-    "@mui/icons-material": "^7.0.2",
-    "@mui/material": "^7.0.2",
+    "@mui/icons-material": "^7.1.0",
+    "@mui/material": "^7.1.0",
     "@tailwindcss/vite": "^4.0.14",
+    "@toolpad/core": "^0.15.0",
     "axios": "^1.9.0",
     "firebase": "^11.7.1",
     "gsap": "^3.12.7",
