--- a/Client/package.json
+++ b/Client/package.json
@@ -17,6 +17,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@mui/icons-material": "^7.1.0",
+    "@mui/joy": "^5.0.0-beta.52",
     "@mui/material": "^7.1.0",
     "@tailwindcss/vite": "^4.0.14",
     "@toolpad/core": "^0.15.0",
@@ -34,7 +35,7 @@
   "devDependencies": {
     "@eslint/js": "^9.21.0",
     "@types/locomotive-scroll": "^4.1.4",
-    "@types/react": "^19.1.2",
+    "@types/react": "^19.1.6",
     "@types/react-dom": "^19.1.2",
     "@vitejs/plugin-react": "^4.3.4",
     "eslint": "^9.21.0",
