--- a/Server/package.json
+++ b/Server/package.json
@@ -21,6 +21,7 @@
         "dotenv": "^16.5.0",
         "express": "^5.1.0",
         "jsonwebtoken": "^9.0.2",
+        "multer": "^2.0.0",
         "pg": "^8.15.6"
     },
     "devDependencies": {
@@ -28,6 +29,7 @@
         "@types/cors": "^2.8.18",
         "@types/express": "^5.0.1",
         "@types/jsonwebtoken": "^9.0.9",
+        "@types/multer": "^1.4.12",
         "@types/pg": "^8.15.1",
         "ts-node": "^10.9.2",
         "typescript": "^5.8.3"
